animation and alignment fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,7 +143,7 @@ body {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  color: #909193;
+  color: #9b9c9d;
 }
 
 .loader:before,
@@ -160,7 +160,7 @@ body {
   animation: 1s spin linear infinite;
 }
 .loader:after {
-  color: #010101;
+  color: #343535;
   transform: rotateY(70deg);
   animation-delay: 0.2s;
 }
